package iPhone;

public interface ReprodutorMusical {



    default void reinicarMusica() {
        System.out.println("Música reiniciada.");
    }

}
