package iPhone;

public class iPhone implements ReprodutorMusical,AparelhoTelefonico,NavegadorInternet {
    @Override
    public void atender() {

    }

    @Override
    public void iniciarCorreioVoz() {

    }

    @Override
    public void ligar(String numero) {

    }

    @Override
    public int selecionar(Strng musica) {
        return 0;
    }

    @Override
    public void atualizarPagina() {

    }

    @Override
    public void adicionarNovaAba() {

    }

    @Override
    public void exibirPagina(String url) {

    }
}
